welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
move(nbPas: Int,versLAvant: Boolean){
  if(versLAvant==true){
  for(i<- 0 to nbPas-1){
    avance()
  }
  }else recule()
  
}